flight stops error solved. modified JS string to C compatible UTF8 strings

--- a/Modules/admin.html
+++ b/Modules/admin.html
@@ -34,31 +34,54 @@
             </div>
         </div>
             
-        <h1>Dashboard Operations</h1>
-      <div class="card-grid">
-        <a href="./subModules/addFlight.html"><div class="card">
-          <img src="/images/fl3.jpg" alt="Add Flight">
-          <p>Add Flight</p>
-        </div></a>
-        <div class="card">
-          <img src="/images/view.jpg" alt="View Flights">
-          <p>View Available Flights</p>
+        <div class="head-info">
+          <h1>Admin Operations</h1>
+          <img alt="GEU-LOGO" src="/images/geu-logo.png">
+
         </div>
+      <div class="card-grid">
         <div class="card">
+            <a href="./subModules/addFlight.html">
+          <img src="/images/fl3.jpg" alt="Add Flight" >
+          <p>Add Flights</p>
+          <div></div>
+        </a>
+        </div>
+
+        <div class="card">
+          <a href="./subModules/viewflights.html">
+            <img src="/images/view.png" alt="View Flights">
+          <p>View Flights</p>
+        </a>
+        </div>
+
+        <div class="card">
+          <a href="./subModules/update.html">
           <img src="/images/update.jpg" alt="Update Flight">
           <p>Update Flight</p>
+        </a>
         </div>
+
         <div class="card">
+          <a href="./subModules/cancel.html">
           <img src="/images/cancel.jpg" alt="Cancel Flight">
           <p>Cancel Flight</p>
+        </a>
         </div>
+
+
         <div class="card">
-          <img src="/images/passengers.png" alt="View Passengers">
+          <a href="./subModules/viewpassengers.html">
+          <img src="/images/passengers.jpg" alt="View Passengers">
           <p>View Passengers</p>
+          </a>
         </div>
+
         <div class="card">
-          <img src="/images/bookings.png" alt="View Bookings">
+          <a href="./subModules/viewbookings.html">
+          <img src="/images/bookings.jpg" alt="View Bookings">
           <p>View Bookings</p>
+          </a>
         </div>
       </div>
     </main>
