--- a/Modules/subModules/viewflights.html
+++ b/Modules/subModules/viewflights.html
@@ -88,6 +88,7 @@
                     <div class="flight-dates">
                         <small>No. of Stops: ${flight.stopCount}</small>
                         <small>Stops: ${flight.stops && flight.stops.length > 0 ? flight.stops.map(stop => `<span>${stop}</span>`).join(', ') : 'None'}</small>
+                        <div></div>
                         <small>${flight.departDate} → ${flight.arrivalDate}</small>
                     </div>
                 </div>
