--- a/Modules/about.html
+++ b/Modules/about.html
@@ -46,45 +46,45 @@
     <div class="team-member">
         <div>
   
-          <img src="/images/glob.jpg" alt="Jane Smith">
+          <img src="/images/glob.jpg" alt="Ashutosh">
       </div>
       <div class="info left">
-        <h3>John Doe</h3>
-        <p>Lead Developer and C Backend Architect. Developed core modules and handled Emscripten integration.</p>
+        <h3>Ashutosh Kumar</h3>
+        <p>Team Leader and C Developer. Developed core Data structure modules </p>
       </div>
     </div>
 
     <div class="team-member">
       <div class="info">
-        <h3>Jane Smith</h3>
-        <p>Frontend Developer. Designed responsive user interfaces and worked on animations and transitions.</p>
+        <h3>Mohamed Sadah Bah</h3>
+        <p>Fullstack Developer. Designed responsive user interfaces, animations, transitions and handled C to web integration using Emscripten.</p>
       </div>
       <div>
 
-          <img src="/images/glob.jpg" alt="Jane Smith">
+          <img src="/images/sadah.jpg" alt="Sadah">
       </div>
     </div>
 
     <div class="team-member">
         <div>
     
-            <img src="/images/glob.jpg" alt="Jane Smith">
+            <img src="/images/glob.jpg" alt="sonali">
         </div>
   
         <div class="info left">
-          <h3>John Doe</h3>
-          <p>Lead Developer and C Backend Architect. Developed core modules and handled Emscripten integration.</p>
+          <h3>Sonali Kumari</h3>
+          <p>Python and C Backend Developer. Developed core Data Structures Module for flight Allocation.</p>
         </div>
     </div>
 
     <div class="team-member">
       <div class="info">
-        <h3>Emily Rose</h3>
-        <p>UI/UX Designer. Created wireframes and maintained a consistent visual style across the project.</p>
+        <h3>Rahul Kumar</h3>
+        <p>C Backend Architect. Developed core Data Structures Module for User booking</p>
       </div>
       <div>
 
-        <img src="/images/glob.jpg" alt="Jane Smith">
+        <img src="/images/glob.jpg" alt="rahul">
     </div>
     </div>
   </section>
