Update flight, cancel flight, booking, payment method, view passengers have been implemented

--- a/Modules/bookflight.html
+++ b/Modules/bookflight.html
@@ -52,11 +52,15 @@
     </form>
 
     <div id="gpay-button">Pay with GPay</div>
+    <div id="cancel-button">Cancel Reservation</div>
+
   </div>
 
   
 
 
   <script src="book.js"></script>
+  <script src="/Modules/interface.js"></script>
+
 </body>
 </html>
