--- a/Modules/login.html
+++ b/Modules/login.html
@@ -96,7 +96,7 @@
         } else if (res === 0) {
          alert('Invalid credentials');
         } else {
-          alert('Error reading credentials');
+          alert('User not available');
         }
       }
 
