All remaining modules completed

--- a/Modules/bookflight.html
+++ b/Modules/bookflight.html
@@ -26,7 +26,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-
 </head>
 <body>
     <img id="logo" src="/images/logo.png" style="display:none;" />
@@ -47,7 +46,7 @@
     <input type="text" placeholder="Full Name" id="name" name="fullname" required />
     <input type="text" placeholder="Passport Number" id="passport" name="passport" required />
     <input type="text" placeholder="Nationality"  id="nationality" name="nationality" required />
-    <input type="text" placeholder="contact number" id="contact" name="contact" required />
+    <input type="text" placeholder="contact"  id="contact" name="contact" required />
     <input type="email" placeholder="Email Address" id="email" name="email"/>
     </form>
 
