--- a/Modules/landing.html
+++ b/Modules/landing.html
@@ -6,6 +6,8 @@
   <title>Skycoders Airline | Fly Smart</title>
   <link rel="stylesheet" href="./landing.css">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <script src="./auth.js" defer></script>
 </head>
 <body>
   <!-- Navbar -->
@@ -133,11 +135,9 @@
   </div>
 
 
+  
+  
   <script src="./landing.js"></script>
-
-  <script>
-    
-  </script>
   <script src="/Modules/interface.js"></script>
 </body>
 </html>
