--- a/Modules/about.html
+++ b/Modules/about.html
@@ -6,6 +6,8 @@
   <title>About Us | Skycoders Airline</title>
   <link rel="stylesheet" href="about.css">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap" rel="stylesheet">
+  <script src="./auth.js" defer></script>
+
 </head>
 
  <!-- Navbar -->
