--- a/Modules/login.html
+++ b/Modules/login.html
@@ -19,7 +19,7 @@
       <ul class="nav-menu">
         <li><a href="./landing.html">Home</a></li>
         <li><a href="./about.html">About Us</a></li>
-        <li><a href="./bookFlight.html">Book Flight</a></li>
+        <li><a href="./landing.html">Book Flight</a></li>
       </ul>
     </nav>
   </header>
