--- a/Modules/reg.html
+++ b/Modules/reg.html
@@ -19,7 +19,7 @@
       <ul class="nav-menu">
         <li><a href="./landing.html">Home</a></li>
         <li><a href="./about.html">About Us</a></li>
-        <li><a href="#">Book Flight</a></li>
+        <li><a href="./landing.html">Book Flight</a></li>
         <li><a href="./login.html">Login</a></li>
       </ul>
     </nav>
